tests/NormalTests/paczka1/fuzzy1/12251823.err
Error in line 2: yYTe S244 40,2
Error in line 1: Itsq2HMTtxx S897 45,8
Error in line 8: Ls1G S897 83,8
Error in line 15: S897 S315 2,1
Error in line 17: S897 S903 96,1
Error in line 25: Ls1G S315 24,4
Error in line 27: mHhU2OkY9vt S897 60,8
Error in line 29: S897 S897 0,0
